# h3-cython

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-wheels.sh  dev-requirements.txt  setup.py
h3/: CMakeLists.txt  _h3.pyx
h3cy/: CMakeLists.txt  __init__.py  _h3.pxi  _h3.pyx  h3api.pxd
test/: test_h3.py
